--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"devDependencies": {
 		"chai": "^4.1.2",
 		"koa": "^2.3.0",
+		"koa-router": "^7.2.1",
 		"mocha": "^4.0.1",
 		"supertest": "^3.0.0"
 	}
