--- a/examples/base/package.json
+++ b/examples/base/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "supervisor app.js"
+        "dev": "supervisor more.js"
     },
     "author": "",
     "license": "ISC",
